--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -37,7 +37,11 @@
     "aparecer",
     "apartirdovalor",
     "checkmark",
+    "descomentado",
+    "descomentamos",
     "desfreezar",
+    "diferent",
+    "diferentão",
     "ecmascript",
     "freezando",
     "isabelli",
@@ -53,8 +57,11 @@
     "mostra",
     "nlw",
     "node",
+    "o",
     "paraaaaa",
+    "respawn",
     "rocketseat",
+    "tipar",
     "typeorm",
     "varchar",
     "viacep",
