--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -37,8 +37,10 @@
     "aparecer",
     "apartirdovalor",
     "checkmark",
+    "debugado",
     "descomentado",
     "descomentamos",
+    "descomentar",
     "desfreezar",
     "diferent",
     "diferentão",
