--- a/Windows Terminal/settings.json
+++ b/Windows Terminal/settings.json
@@ -39,13 +39,17 @@
   "copyFormatting": "none",
   "copyOnSelect": false,
   "defaultProfile": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+  "initialCols": 60,
+  "initialRows": 20,
   "profiles": {
     "defaults": {
-      "colorScheme": "Bubbles"
+      "colorScheme": "Bubbles",
+      "fontFace": "Fira Code",
+      "fontSize": 13
     },
     "list": [
       {
-        "commandline": "powershell.exe",
+        "commandline": "powershell.exe -nologo",
         "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
         "hidden": false,
         "name": "Windows PowerShell"
