--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -23,6 +23,7 @@
   "workbench.colorTheme": "Omni",
   "cSpell.userWords": [
     "API's",
+    "Avenir",
     "Axios",
     "CEPs",
     "Cataline",
@@ -34,6 +35,7 @@
     "Omni",
     "Rocketseat",
     "Thiago",
+    "Unmount",
     "aparecer",
     "apartirdovalor",
     "checkmark",
