--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -27,6 +27,8 @@
     "Axios",
     "CEPs",
     "Cataline",
+    "Componentiza",
+    "Componentização",
     "Cript",
     "Descript",
     "Hoppsctoch",
@@ -48,6 +50,8 @@
     "diferent",
     "diferentão",
     "ecmascript",
+    "fontawesome",
+    "fortawesome",
     "freezando",
     "isabelli",
     "js",
