--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -49,7 +49,9 @@
     "desfreezar",
     "diferent",
     "diferentão",
+    "divs",
     "ecmascript",
+    "flexbox",
     "fontawesome",
     "fortawesome",
     "freezando",
