--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -35,7 +35,6 @@
   "liveServer.settings.donotShowInfoMsg": true,
   "editor.suggestSelection": "first",
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "workbench.colorTheme": "Omni",
   "cSpell.userWords": [
     "API's",
     "Avenir",
@@ -56,8 +55,10 @@
     "Rocketseat",
     "Thiago",
     "Unmount",
+    "Youtube",
     "aparecer",
     "apartirdovalor",
+    "axios",
     "checkmark",
     "debugado",
     "debugar",
@@ -69,12 +70,15 @@
     "diferentão",
     "divs",
     "ecmascript",
+    "favicon",
     "flexbox",
     "fontawesome",
     "fortawesome",
     "freezando",
+    "greenyellow",
     "isabelli",
     "js",
+    "ts",
     "jsxdev",
     "lopes",
     "lulee",
@@ -86,10 +90,16 @@
     "mnsgs",
     "mostra",
     "nlw",
+    "vue",
+    "nuxt",
     "node",
+    "nodejs",
+    "vuejs",
+    "nuxtjs",
     "o",
     "paraaaaa",
     "respawn",
+    "rgba",
     "rocketseat",
     "scripthost",
     "tipar",
@@ -180,5 +190,7 @@
       "args": ["-NoLogo"]
     }
   },
-  "vetur.format.options.tabSize": 4
+  "vetur.format.options.tabSize": 4,
+  "cSpell.enableFiletypes": ["vue"],
+  "workbench.colorTheme": "Omni"
 }
