--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -38,61 +38,55 @@
   "editor.suggestSelection": "first",
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
   "cSpell.userWords": [
+    "adonisjs",
+    "aparecer",
+    "apartirdovalor",
     "API's",
     "Avenir",
+    "axios",
     "Axios",
+    "bedimcode",
     "Bootcamp",
-    "CEPs",
+    "browserslist",
     "Cataline",
+    "CEPs",
+    "checkmark",
     "Componentiza",
     "Componentização",
     "Cript",
-    "Descript",
-    "Ecommerce",
-    "Glassmorphic",
-    "Hoppsctoch",
-    "KABUM",
-    "Knex",
-    "Nunito",
-    "Nuxt",
-    "Omni",
-    "Playstation",
-    "Reseta",
-    "Responsivando",
-    "Rocketseat",
-    "Serializa",
-    "Thiago",
-    "Unmount",
-    "Youtube",
-    "aparecer",
-    "apartirdovalor",
-    "axios",
-    "bedimcode",
-    "browserslist",
-    "checkmark",
+    "crossorigin",
     "debugado",
     "debugar",
     "descomentado",
     "descomentamos",
     "descomentar",
+    "Descript",
     "desfreezar",
     "diferent",
     "diferentão",
     "divs",
     "ecmascript",
+    "Ecommerce",
+    "extnames",
     "favicon",
     "flexbox",
     "fontawesome",
     "fortawesome",
     "freezando",
+    "Glassmorphic",
     "greenyellow",
+    "haha",
+    "Hoppsctoch",
     "imageurl",
     "isabelli",
     "js",
     "jsxdev",
+    "KABUM",
+    "Knex",
     "longtext",
     "lopes",
     "lulee",
+    "luxon",
     "maykbrito",
     "mensagem",
     "microframework",
@@ -105,27 +99,40 @@
     "nlw",
     "node",
     "nodejs",
+    "Nunito",
     "nuxt",
+    "Nuxt",
     "nuxtjs",
     "o",
+    "Omni",
     "origamid",
     "paraaaaa",
+    "Playstation",
     "repos",
+    "Reseta",
     "respawn",
+    "Responsivando",
     "rgba",
     "rocketseat",
+    "Rocketseat",
     "scripthost",
+    "Serializa",
     "swiper",
+    "Thiago",
     "tipar",
     "transpilar",
     "ts",
     "typeorm",
+    "Unfollow",
+    "UNICONS",
+    "Unmount",
     "varchar",
     "viacep",
     "vue",
     "vuejs",
     "vuex",
     "webservice",
+    "Youtube",
     "yungsilva"
   ],
   "editor.fontWeight": "normal",
@@ -268,6 +275,10 @@
     "terminal.background": "#000",
     "titleBar.activeBackground": "#000",
     "titleBar.inactiveBackground": "#000",
+    /* Tira as indicações coloridas da scrollbar: */
+    "editorOverviewRuler.addedForeground": "#000",
+    "editorOverviewRuler.modifiedForeground": "#000",
+    "editorOverviewRuler.deletedForeground": "#000",
 
     /* Achar a cor que vc quer modificar de algum tema: 
       1º Ctrl+Shift+P;
@@ -283,5 +294,9 @@
     }
   },
   "sync.gist": "725dee5efa98edc6b63104d871a1b960",
-  "workbench.colorTheme": "Dracula"
+  "workbench.colorTheme": "Dracula",
+  "diffEditor.ignoreTrimWhitespace": false,
+  /* Tira as linhas coloridas do lado esquerdo do editor: */
+  "scm.diffDecorations": "none",
+  "cSpell.ignoreWords": ["Bergmann"]
 }
