--- a/Windows Terminal/settings.json
+++ b/Windows Terminal/settings.json
@@ -43,7 +43,7 @@
   "initialRows": 20,
   "profiles": {
     "defaults": {
-      "colorScheme": "Bubbles",
+      "colorScheme": "deep",
       "fontFace": "Fira Code",
       "fontSize": 13,
       "startingDirectory": "C:\\Users\\Thiago Silva Lopes\\Desktop"
@@ -71,6 +71,98 @@
     ]
   },
   "schemes": [
+    {
+      "name": "deep",
+      "black": "#000000",
+      "red": "#d70005",
+      "green": "#1cd915",
+      "yellow": "#d9bd26",
+      "blue": "#5665ff",
+      "purple": "#b052da",
+      "cyan": "#50d2da",
+      "white": "#e0e0e0",
+      "brightBlack": "#535353",
+      "brightRed": "#fb0007",
+      "brightGreen": "#22ff18",
+      "brightYellow": "#fedc2b",
+      "brightBlue": "#9fa9ff",
+      "brightPurple": "#e09aff",
+      "brightCyan": "#8df9ff",
+      "brightWhite": "#ffffff",
+      "background": "#090909",
+      "foreground": "#cdcdcd",
+      "selectionBackground": "#780002",
+      "cursorColor": "#d0d0d0"
+    },
+    {
+      "name": "Brogrammer",
+      "black": "#1f1f1f",
+      "red": "#f81118",
+      "green": "#2dc55e",
+      "yellow": "#ecba0f",
+      "blue": "#2a84d2",
+      "purple": "#4e5ab7",
+      "cyan": "#1081d6",
+      "white": "#d6dbe5",
+      "brightBlack": "#d6dbe5",
+      "brightRed": "#de352e",
+      "brightGreen": "#1dd361",
+      "brightYellow": "#f3bd09",
+      "brightBlue": "#1081d6",
+      "brightPurple": "#5350b9",
+      "brightCyan": "#0f7ddb",
+      "brightWhite": "#ffffff",
+      "background": "#131313",
+      "foreground": "#d6dbe5",
+      "selectionBackground": "#1f1f1f",
+      "cursorColor": "#b9b9b9"
+    },
+    {
+      "name": "Banana Blueberry",
+      "black": "#17141f",
+      "red": "#ff6b7f",
+      "green": "#00bd9c",
+      "yellow": "#e6c62f",
+      "blue": "#22e8df",
+      "purple": "#dc396a",
+      "cyan": "#56b6c2",
+      "white": "#f1f1f1",
+      "brightBlack": "#495162",
+      "brightRed": "#fe9ea1",
+      "brightGreen": "#98c379",
+      "brightYellow": "#f9e46b",
+      "brightBlue": "#91fff4",
+      "brightPurple": "#da70d6",
+      "brightCyan": "#bcf3ff",
+      "brightWhite": "#ffffff",
+      "background": "#191323",
+      "foreground": "#cccccc",
+      "selectionBackground": "#220525",
+      "cursorColor": "#e07d13"
+    },
+    {
+      "name": "Blue Matrix",
+      "black": "#101116",
+      "red": "#ff5680",
+      "green": "#00ff9c",
+      "yellow": "#fffc58",
+      "blue": "#00b0ff",
+      "purple": "#d57bff",
+      "cyan": "#76c1ff",
+      "white": "#c7c7c7",
+      "brightBlack": "#686868",
+      "brightRed": "#ff6e67",
+      "brightGreen": "#5ffa68",
+      "brightYellow": "#fffc67",
+      "brightBlue": "#6871ff",
+      "brightPurple": "#d682ec",
+      "brightCyan": "#60fdff",
+      "brightWhite": "#ffffff",
+      "background": "#101116",
+      "foreground": "#00a2ff",
+      "selectionBackground": "#c1deff",
+      "cursorColor": "#76ff9f"
+    },
     {
       "background": "#161D38",
       "black": "#000000",
