--- a/VS Code/settings.json
+++ b/VS Code/settings.json
@@ -11,7 +11,7 @@
   "workbench.iconTheme": "material-icon-theme",
 
   //Configs da minha fonte:
-  "editor.fontFamily": "'JetBrains Mono'",
+  "editor.fontFamily": "JetBrains Mono",
   "editor.fontSize": 13,
   "editor.fontLigatures": true,
   "editor.lineHeight": 1.4,
@@ -191,7 +191,9 @@
   "extensions.ignoreRecommendations": true,
 
   "javascript.updateImportsOnFileMove.enabled": "always",
-  "typescript.updateImportsOnFileMove.enabled": "never",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  //See what props needs to be passed to function whitour hover:
+  "typescript.inlayHints.parameterNames.enabled": "all",
 
   "breadcrumbs.enabled": true,
   "editor.parameterHints.enabled": false,
